Assignment3/kubernetes/Bonus - Network-Policy/backend-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-backend
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: python-tiny-url
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: nginx-ws-ns
